--- a/templates/edit_movie.html
+++ b/templates/edit_movie.html
@@ -10,7 +10,7 @@
   <form action="/update_movie" method="post">
     <p>
       <label for="title">Movie:</label> <br />
-      <input type="text" name="title" id="title" value="{{ movie.title }}" maxlength="50" required />
+      <input type="text" name="title" id="title" value="{{ movie.title }}" maxlength="100" required />
     </p>
     <p>Rating:</p>
     <p>
@@ -21,7 +21,7 @@
       <input type="radio" name="rating" value="5" {% if movie.evaluation == 5 %}checked{% endif %} required /> *****
     </p>
     <input type="hidden" name="movie_id" value="{{ movie.id }}">
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+    <!-- <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" /> -->
     <input type="submit" value="Update" />
   </form>
 </div>
